# bitcoin-experiments

./: .gitignore  Makefile  README.md  Untitled.ipynb  pyproject.toml  requirements.txt  setup.py
36120-group30-experiments/: __init__.py  dataset.py  features.py  plots.py
36120-group30-experiments/modeling/: predict.py  train.py
data/processed/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
data/raw/: TRON_01_01_2017-01_01_2018_historical_data_coinmarketcap.csv  TRON_01_01_2018-01_01_2019_historical_data_coinmarketcap.csv  TRON_01_01_2019-01_01_2020_historical_data_coinmarketcap.csv  TRON_01_01_2020-01_01_2021_historical_data_coinmarketcap.csv  TRON_01_01_2021-01_01_2022_historical_data_coinmarketcap.csv  TRON_01_01_2022-01_01_2023_historical_data_coinmarketcap.csv  TRON_01_01_2023-01_01_2024_historical_data_coinmarketcap.csv  TRON_01_01_2024-01_01_2025_historical_data_coinmarketcap.csv  XRP_01_01_2015-01_01_2016_historical_data_coinmarketcap.csv  XRP_01_01_2016-01_01_2017_historical_data_coinmarketcap.csv  XRP_01_01_2017-01_01_2018_historical_data_coinmarketcap.csv  XRP_01_01_2018-01_01_2019_historical_data_coinmarketcap.csv  XRP_01_01_2019-01_01_2020_historical_data_coinmarketcap.csv  XRP_01_01_2020-01_01_2021_historical_data_coinmarketcap.csv  XRP_01_01_2021-01_01_2022_historical_data_coinmarketcap.csv  XRP_01_01_2022-01_01_2023_historical_data_coinmarketcap.csv  XRP_01_01_2023-01_01_2024_historical_data_coinmarketcap.csv  XRP_01_01_2024-01_01_2025_historical_data_coinmarketcap.csv
docs/: Makefile  conf.py  index.rst  make.bat  mkdocs.yml
docs/docs/: index.md
models/: best_model.pkl  best_model_XRP.joblib  best_model_tron.pkl  features.json  lgb_model.joblib  pca_XRP.joblib  preprocess_func.pkl  scaler_XRP.joblib
notebooks/: 36120-25SP-AT3-30-257363727.ipynb  36120-25SP-AT3-group_30-25606169.ipynb  36120_25SP_AT3_30_25942133.ipynb  36120_25SP_AT3_group30_25942133.ipynb  36120_AT3_group30_25506751.ipynb  36120_AT3_group30_25506751_AT3_experiment_1.ipynb
src/data/: X_train.csv  X_val.csv  kraken_ohlc.csv  solana_latest.csv  solana_test.csv  solana_test_df.csv  test.csv  y_train.csv  y_val.csv
src/data/Solana/: Solana_01_01_2021-01_01_2022_historical_data_coinmarketcap.csv  Solana_01_01_2022-01_01_2023_historical_data_coinmarketcap.csv  Solana_01_01_2023-01_01_2024_historical_data_coinmarketcap.csv  Solana_01_01_2024-01_01_2025_historical_data_coinmarketcap.csv
